# agentforge

./: .gitignore  CLAUDE.md  Makefile  PLAN_DAG.md  README.md  README.zh.md  index.html  keep_running.sh  pyproject.toml  taskboard.py  taskboard.spec  taskboard_bus.py  todo.md
.claude/: settings.local.json
.github/workflows/: ci.yml
channels/: README.md  __init__.py  agent_utils.py  dir_utils.py  feishu_channel.py  slack_channel.py  telegram_channel.py  weixin_channel.py
channels/weixin_bridge/: index.mjs  package.json
docs/: forwarded-message-support-plan.md  installation-troubleshooting.md  rfc-codex-cli-support.md  rfc-heartbeat.md  template-library-design.md  todo.md
docs/competitive-analysis/: 2026-03-06.md  vibe-kanban-deep-research-2026-03-06.md
docs/superpowers/plans/: 2026-03-18-backend-quality-baseline.md  2026-03-23-weixin-channel-mvp.md
docs/superpowers/specs/: 2026-03-23-weixin-channel-design.md
issues/: support-codex.md
skills/agentforge/: SKILL.md
skills/agentforge/scripts/: agentforge_api.py
taskboard-electron/: .gitignore  forge.config.js  index.html  package-lock.json  package.json  test_hot_reload.mjs  vite.main.config.mjs  vite.renderer.config.mjs
taskboard-electron/scripts/: build-backend.mjs
taskboard-electron/src/: main.js  preload.js
taskboard-electron/src/renderer/: App.jsx  channelsSettings.mjs  (+3 more)
tests/: conftest.py  test_channel_utils.py  test_feishu_forwarded_messages.py  test_feishu_message_rendering.py  test_heartbeat.py  test_scheduler_timezones.py  test_taskboard_bus.py  test_telegram_forwarded_messages.py  test_weixin_channel.py  test_weixin_status.py
