[project]
name = "agentforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "requests>=2.32.5",
    "lark-oapi>=1.3.0",
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.0.0",
    "claude-monitor>=3.1.0",
    "pyinstaller>=6.18.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
]
