[project]
name = "agentforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "requests>=2.32.5",
    "lark-oapi>=1.3.0",
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.0.0",
    "claude-monitor>=3.1.0",
    "pyinstaller>=6.18.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "python-socks>=2.8.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "skills",
    "taskboard-electron",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
branch = true
source = [
    "taskboard",
    "taskboard_bus",
    "channels",
]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 20
